--- a/ProgressiveScale/ProgressiveScale/ProgressiveScale.csproj
+++ b/ProgressiveScale/ProgressiveScale/ProgressiveScale.csproj
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="20.3.47" />
+	  <PackageReference Include="Syncfusion.Maui.Gauges" Version="*" />
 	</ItemGroup>
 
 </Project>
